# demo-python-poker

./: README.md  main.py  pyproject.toml
poker/: cartisian_product.py  example.py  layout.py  poker.py
